--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,15 @@
 @import "tailwindcss";
 @plugin "daisyui" {
-  themes: dracula --default;
+  themes: dark --default;
 }
 /* pastel */
+
+.custom-scroll::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.custom-scroll {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
